<resources>

    <string name="app_name">tinyGSN</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_tinygsn_main">tinyGSN</string>
    <string name="time_text">time_text</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="load">Load</string>
    <string name="view_chart">View chart</string>
    <string name="latest_values">latest values</string>
    <string name="customize">Customize</string>
    <string name="detail">Detail</string>
    <string name="add_new_vs">Add new Virtual Sensor</string>
    <string name="input_vs_name">Please input VS name</string>
    <string name="selectVS">Please select a VS</string>
    <string name="vs">Virtual Sensor</string>
    <string name="selectField">Select field</string>
    <string name="save_vs_config">Save VS Config</string>
    <string name="vsName">VS Name</string>
    <string name="vsType">VS Type</string>
    <string name="dcDuration">Duty cycle duration</string>
    <string name="dcInterval">Duty cycle interval</string>
    <string name="wsize">Window Size</string>
    <string name="step">Step</string>
    <string name="timebased">Is time based?</string>
    <string name="samplingRate">Sampling Rate</string>
    <string name="ss">Stream Source</string>
    <string name="aggregator">Aggregator</string>
    <string name="wrapper">Wrapper</string>
    <string name="scheduler">Scheduler</string>
    <string name="defaultsr">1000</string>
    <string name="defaultws">5</string>
    <string name="defaultstep">1</string>
    <string name="view_mode">View mode</string>
    <string name="iteration_time">Iteration between two publish operations (in ms)</string>
    <string name="server">GSN server</string>
    <string name="strategy">Strategy</string>
    <string name="Publish_Data">Publish Data</string>
    <string name="gsnserver">localhost:22001</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="guest">guest</string>
    <string name="connect">Connect</string>
    <string name="every">Every (seconds)</string>
    <string name="sixty">60</string>
    <string name="publish">Publish Now</string>
    <string name="select">Select Virtual Sensors</string>
    <string name="select_mode">Select publish mode</string>
    <string name="select_sub_mode">Select subscription mode</string>
    <string name="pubClient">Client ID</string>
    <string name="pubSecret">Client secret</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: receive subscribed data from GSN!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="test_vs_name">GPS virtual sensor</string>
    <string name="test_value">longitude: 20.2</string>
    <string name="view_data">View data</string>
    <string name="config">Config VS</string>
    <string name="edit">Edit VS</string>
    <string name="list_vs">List of VS</string>
    <string name="publish_activity">Publish data</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="pull">"Pull data from GSN "</string>
    <string name="warnAPIVersionText">"Your Android version is less than Android 4.4W–4.4W.2 KitKat.\nThe sensors cannot be verified so it is possible the application does not work well!"</string>
</resources>