
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

   <TableLayout
       android:id="@+id/tableLayout_vs"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/background"
       android:textColor="@color/black"
       android1:stretchColumns="1" >

        <!-- Virtual Sensor -->

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <TextView
                android1:id="@+id/textView_vs"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android1:gravity="center"
                android1:text="@string/vs"
                android1:textAppearance="?android:attr/textAppearanceMedium"
                android1:textColor="@color/black" />


        <TableRow
            android:id="@+id/tableRow_vsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_vsName"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/vsName"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_vsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textColor="@color/black" >

                <!-- <requestFocus /> -->
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_vsType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_vsType"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/vsType"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <Spinner
                android1:id="@+id/spinner_vsType"
                style="@layout/spinner_item"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android1:prompt="@string/selectVS"
                android1:textColor="@color/black" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

       <TableRow
            android:id="@+id/table_vsensor_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <!-- Stream Source -->

        <TableRow
            android:id="@+id/tableRow_ss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_ss"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android1:text="@string/ss"
                android1:textAppearance="?android:attr/textAppearanceMedium"
                android1:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

        <Button
            android1:id="@+id/button_add"
            style="?android:attr/buttonStyleSmall"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_gravity="center"
            android1:text="+" />

        </TableRow>

    </TableLayout>

</ScrollView>