<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:android1="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android1:background="@color/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android1:layout_height="wrap_content"
        android1:orientation="vertical">

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content">

            <TextView
                android1:id="@+id/textView_server"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/server"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="#000000"/>

            <EditText
                android1:id="@+id/editText_server"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android1:layout_weight="1"
                android1:ems="5"
                android1:inputType="text"
                android1:text="@string/gsnserver"
                android1:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content">

            <TextView
                android1:id="@+id/textView_client"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/pubClient"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black"/>

            <EditText
                android:id="@+id/editText_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="numberDecimal"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content">

            <TextView
                android1:id="@+id/textView_secret"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/pubSecret"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black"/>

            <EditText
                android:id="@+id/editText_secret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="numberDecimal"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content">

            <TextView
                android1:id="@+id/textView_vsName"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/select"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black"/>

            <Spinner
                android1:id="@+id/spinner_vsName"
                style="@layout/spinner_item"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android1:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content">

            <TextView
                android1:id="@+id/textView_mode"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/select_mode"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black"/>

            <Spinner
                android1:id="@+id/spinner_mode"
                style="@layout/spinner_item"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android1:prompt="@string/select_mode"
                android1:textColor="@color/black"/>
        </LinearLayout>


        <TextView
            android1:id="@+id/textViewFrom"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="From"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#000000"/>


        <EditText
            android1:id="@+id/fromtime"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:ems="10"
            android1:inputType="time"/>


        <EditText
            android1:id="@+id/fromdate"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:ems="10"
            android1:inputType="date"/>

        <TextView
            android1:id="@+id/textViewTo"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="To"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#000000"/>


        <EditText
            android1:id="@+id/totime"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:ems="10"
            android1:inputType="time"/>


        <EditText
            android1:id="@+id/todate"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:ems="10"
            android1:inputType="date"/>

        <Button
            android1:id="@+id/Button_publish"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:onClick="publish"
            android1:text="Publish Now"/>

        <TextView
            android1:id="@+id/textIterationTime"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/iteration_time"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="@color/black"/>
        <EditText
            android1:id="@+id/iterationTime"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:ems="10"
            android1:text="30000"
            android1:inputType="number"/>

    </LinearLayout>


</ScrollView>