<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:textColor="#000000"
     >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dip"
        android:gravity="center" >

        <TextView
            android1:id="@+id/textView3"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/vs"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#000000" />

        <Spinner
            android1:id="@+id/spinner_vs"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:prompt="@string/selectVS"
            android1:textColor="#000000" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowField"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dip"
        android:gravity="center" >

        <TextView
            android1:id="@+id/textViewField"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/selectField"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#000000" />

        <Spinner
            android1:id="@+id/spinner_field"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:prompt="@string/selectVS"
            android1:textColor="#000000" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowViewMode"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dip"
        android:gravity="center" >

        <TextView
            android1:id="@+id/textViewMode"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/view_mode"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#000000"
             />

        <Spinner
            android1:id="@+id/spinner_view_mode"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:prompt="@string/selectVS"
            android1:textColor="#000000" />
    </TableRow>

   

    <TableRow
        android:id="@+id/tableRow_"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dip"
        android:gravity="center" >

        <TableLayout
            android:id="@+id/table_view_mode"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_span="2"
            android:background="@color/background"
            android:gravity="center"
            android:textColor="#000000" >
        </TableLayout>
    </TableRow>

 <TableRow
        android:id="@+id/tableRow_data"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dip"
        android:gravity="center" >


        <ScrollView
           
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:layout_span="2">

            <TextView
                android1:id="@+id/txbViewData"
                android1:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                />
        </ScrollView>
</TableRow>

</TableLayout>
